// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleBylineWithLinks tests on web 1. single inline element 1`] = `
<div>
  <div>
    Lindsay McIntosh Scottish Political Editor
  </div>
</div>
`;

exports[`ArticleBylineWithLinks tests on web 2. with the author in the begining 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , Environment Editor
  </div>
</div>
`;

exports[`ArticleBylineWithLinks tests on web 3. with the author at the end 1`] = `
<div>
  <div>
    RBS Six Nations 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
</div>
`;

exports[`ArticleBylineWithLinks tests on web 4. with multiple authors separated by text with commas 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`ArticleBylineWithLinks tests on web 5. with multiple authors separated by spaces 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
     
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
     
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`ArticleBylineWithLinks tests on web 6. null with an empty ast 1`] = `null`;
